--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "15.0.3",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
