--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "next": "15.0.3",
+    "next-videos": "^1.4.1",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
