--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.81.1",
-    "sass-loader": "^16.0.3"
+    "sass-loader": "^16.0.3",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
